Added the plotting code for question 1 - Created a folder for each question - Added a python script to generate the plots for the first question

--- a/question_1/input_seq.config
+++ b/question_1/input_seq.config
@@ -4,7 +4,7 @@ direct=0
 directory=./
 blocksize=16K
 filesize=1G
-readwrite=randrw
+readwrite=rw
 loops=5
 
 [job0.0]
@@ -45,5 +45,10 @@ filename=bench
 [job7.0]
 numjobs=1
 rwmixwrite=87.5
+filename=bench
+
+[job8.0]
+numjobs=1
+rwmixwrite=100
 filename=bench
 
